--- a/mutual-platform/templates/new_task.html
+++ b/mutual-platform/templates/new_task.html
@@ -9,13 +9,13 @@
 	    <dt>Task Content:
 	      <br>
 	  <textarea name="content" cols=40 rows=4></textarea>
-	<dt>Public Date:
-	  <input type="text" name="public_year" size="4">(year)/
-	  <input type="text" name="public_month" size="2">(month)/
-	  <input type="text" name="public_day" size="2">(day) - 
-	  <input type="text" name="public_hour" size="2">(hour):
-	  <input type="text" name="public_min" size="2">(min).
-	</dt>
+	<!-- <dt>Public Date: -->
+	<!--   <input type="text" name="public_year" size="4">(year)/ -->
+	<!--   <input type="text" name="public_month" size="2">(month)/ -->
+	<!--   <input type="text" name="public_day" size="2">(day) -  -->
+	<!--   <input type="text" name="public_hour" size="2">(hour): -->
+	<!--   <input type="text" name="public_min" size="2">(min). -->
+	<!-- </dt> -->
 	<dt>End Date:
 	  <input type="text" name="end_year" size="4">(year)/
 	  <input type="text" name="end_month" size="2">(month)/
