--- a/mutual-platform/templates/new_task.html
+++ b/mutual-platform/templates/new_task.html
@@ -30,7 +30,7 @@
 	      {% endfor %}
 	      </select>
 	</dt>
-	    <div class="actions"><input type="submit" value="Sign Up"></div>
+	    <div class="actions"><input type="submit" value="Submit"></div>
 </form>
 <br>
 <li><a href="{{url_for('new_tag_page')}}">New Tag</a></li>
