--- a/mutual-platform/templates/layout.html
+++ b/mutual-platform/templates/layout.html
@@ -1,15 +1,22 @@
 <!doctype html>
-<html>
-  <head>
     <title>{% block title %}{% endblock %} - Micro Mutual Platform</title>
-  </head>
-  <body>
-    <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
-        {% block footer %}
-        {% endblock %}
-    </div>
-    <br>
-    <li><a href="{{ url_for('help_page')}}">Help</a></li>
-  </body>
-</html>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+<div class="page">
+  <h1>Micro Mutual Platform</h1>
+  <div class="navigation">
+  {% if g.user %}
+    <a href="{{ url_for('welcome_page') }}">Welcome</a> |
+    <a href="{{ url_for('people_page', username=g.user) }}">Homepage</a> |
+    <a href="{{ url_for('new_task_page') }}">Post Task</a> |
+    <a href="{{ url_for('logout') }}">Sign Out</a>|
+  {% else %}
+    <a href="{{ url_for('register_phone') }}">Sign Up</a> |
+    <a href="{{ url_for('login') }}">Sign In</a> |
+  {% endif %}
+    <a href="{{ url_for('help_page')}}">Help</a>
+  </div>
+  <div class="body">
+  {% block content %}{% endblock %}
+  </div>
+</div>
+
