--- a/mutual-platform/templates/login.html
+++ b/mutual-platform/templates/login.html
@@ -5,8 +5,8 @@
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
-      <dt>Username:
-      <dd><input type="text" name="username" size="30">
+      <dt>Phone Number:
+      <dd><input type="text" name="phone" size="30">
       <dt>Password:
       <dd><input type="password" name="password" size="30">
     </dl>
