--- a/mutual-platform/templates/tag.html
+++ b/mutual-platform/templates/tag.html
@@ -9,14 +9,17 @@
   Created Date: {{ init }}
 </div>
 <br>
+{% if num_task > 0 %}
 <table>
 Tasks in {{name}}:
-
-{% for task in tasks %}
-<tr><td>
-  <a href="{{url_for('task_page', task_id=task['task_id'])}}">{{task["title"]}}</a>
-  </td><td>{{task["statu_str"]}}</td>
+<tr><td>Task ID</td><td>Title</td><td>Statu</td></tr>
+{% for i in range(num_task) %}
+<tr><td>{{task_ids[i]}}</td><td>
+  <a href="{{url_for('task_page', task_id=task_ids[i])}}">{{task_titles[i]}}</a>
+  </td><td>{{task_status[i]}}</td>
 </tr>
-</table>
 {% endfor %}
+</table>
+{% endif %}
+
 {% endblock %}
