--- a/mutual-platform/templates/urgent.html
+++ b/mutual-platform/templates/urgent.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block title %}Urgent Tasks{% endblock %}
 {% block content %}
-<h2>Urgent Tasks that Have NOT recievied by anybody</h2>
-<h3>Have less 6 hours before End Date</h3>
+<h2>Urgent Tasks that Have NOT receivied by anybody</h2>
+<h3>Have less 6 hours before Deadline</h3>
 
 <table>
 
