--- a/mutual-platform/templates/popular.html
+++ b/mutual-platform/templates/popular.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Popular Tasks{% endblock %}
 {% block content %}
-<h2>Popular Activate Tasks</h2>
+<h2>Popular Activated Tasks</h2>
 <table>
 
 <tr><td>Task ID</td><td>Task</td><td>Poster</td><td>Statu</td><td>End Date</td><td>#Hits</td></tr>
