--- a/mutual-platform/templates/recent.html
+++ b/mutual-platform/templates/recent.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Recent Tasks{% endblock %}
 {% block content %}
-<h2>Recent Activate Tasks</h2>
+<h2>Recent Activated Tasks</h2>
 
 <table>
 
