--- a/mutual-platform/templates/help.html
+++ b/mutual-platform/templates/help.html
@@ -2,7 +2,7 @@
 {% block title %}Help{% endblock %}
 {% block content %}
 <h2>ABOUT</h2>
-MMP is a mutual platform for students and staffs in school.<br>
+This is a mutual platform for students and staffs in school.<br>
 For users in this platform, you can post your tasks and others will help you.<br>
 And, if you is a staff, you can post a notice to all students in this platform.<br>
 <br>
@@ -13,7 +13,7 @@ There are there steps for you to register a account.<br>
 2. Valid your phone number<br>
 3. Complete your account information<br>
 <br>
-You have to enter unique username, your staudent number and your address.<br>
+You have to enter unique username, your student number and your address.<br>
 Least but not last, Your password.<br>
 <br>
 You MUST remember your <strong>phone number and password</strong> to sign in.<br>
@@ -21,14 +21,14 @@ You MUST remember your <strong>phone number and password</strong> to sign in.<br
 <h3>Task & Tag</h3>
 <strong>Tasks</strong> in this platform is arranged by <strong>Tags</strong>.<br>
 So, if you want to post your task in some topic, please make sure you choose the related tags.<br>
-Of course, you can create new tag.<br>
+Of course, you can create a new tag by yourself.<br>
 <br>
 For post a task, you have to enter the title and describtions about it.<br>
 Besides Tags, you also need enter the <strong>deadline</strong> of your task.<br>
 If the user who help you are not complete task before deadline, this task would FAILED.<br>
 Moreover, if it have not received by anyone, this task will be CLOSED.<br>
 <br>
-If you want to receive the task post by others,<br>
+If you want to receive the task posted by others,<br>
 you can hit the 'Receive' submit under the task before another person get that task.<br>
 After receive the task, and complete that task, you should hit the 'Complete' submit.<br>
 Or, if you want to abort the task, you also should hit the 'Abort' submit.<br>
@@ -40,8 +40,8 @@ And average of those scores will be the score you get, and be showed in your hom
 <br>
 If you is a staff and need post a notice, you need click the 'Post Notice' in index page.<br>
 <h3>Show</h3>
-Under different tags, the tasks will be showed by create date.<br>
-Also there will be other specifiec show page.<br>
+Under different tags, the tasks will be listed order by create date.<br>
+Also, there will be other specifiec show page.<br>
 <li><strong>Urgent</strong> Tasks show the tasks that have not received by anyone and have less 6 hours before deadline.</li>
 <li><strong>Recent</strong> Tasks show the tasks that active in one day.</li>
 <li><strong>Popular</strong> Tasks show the tasks that hit most by users.</li>
