--- a/mutual-platform/templates/layout.html
+++ b/mutual-platform/templates/layout.html
@@ -2,7 +2,7 @@
     <title>{% block title %}{% endblock %} - Micro Mutual Platform</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 <div class="page">
-  <h1>Micro Mutual Platform</h1>
+  <h1>Micro Mutual Help Platform</h1>
   <div class="navigation">
   {% if g.user %}
     <a href="{{ url_for('welcome_page') }}">Welcome</a> |
